<resources>
    <string name="app_name">MoviesMVP</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="error_message">Error</string>


    <string name="error_message_internet_unavailable">No internet Connection !</string>
    <string name="something_wrong">Something went wrong</string>

    <string name="release_date_txt">"Release Date: "</string>
    <string name="rating_txt">"Rating : "</string>

    <string name="large_text">""</string>
    <string name="genres_lbl">Genres:</string>
    <string name="p_company_txt">Production Companies:</string>
    <string name="overview_txt">Overview:</string>
    <string name="status_txt">"Status: "</string>
    <string name="release_txt">"Release Date: "</string>

    <string name="missing_key">Looks like you forgot to add your themoviedb api key in Constants.java</string>

</resources>
