<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"

    tools:showIn="@layout/activity_movie_detail">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tagline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/text_margin"
        style="@style/TextLbl"
        android:text="@string/large_text" />

    <TextView

        style="@style/TextHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/text_margin"

        android:text="@string/status_txt"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/text_margin"
        style="@style/TextLbl"
        android:text="@string/large_text" />

    <TextView
        android:id="@+id/release_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/TextLbl"
        android:layout_margin="@dimen/text_margin"
        android:text="@string/large_text" />


    <TextView
        android:id="@+id/genres_lbl"
        style="@style/TextHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/text_margin"
        android:text="@string/genres_lbl"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/genres"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/text_margin"
        style="@style/TextLbl"
        android:text="@string/large_text" />

    <TextView
        android:id="@+id/prod_companies_lbl"
        style="@style/TextHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/text_margin"
        android:text="@string/p_company_txt"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/prod_companies"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/text_margin"
        style="@style/TextLbl"
        android:text="@string/large_text" />

    <TextView

        style="@style/TextHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/text_margin"
        android:text="@string/overview_txt"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/overview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/text_margin"
        style="@style/TextLbl"
        android:text="@string/large_text" />

    <TextView
        android:id="@+id/homepage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/text_margin"
        android:inputType="textUri"
        style="@style/TextLbl"
        android:text="@string/large_text" />
</LinearLayout>
</android.support.v4.widget.NestedScrollView>
